--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2006572242-ALWpqmoo'
+                liffId: '2006598395-Qmx3ayKM'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
