--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
-        <div class="label">電話番号※任意</div>
+        <div class="label">電話番号※必須</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
         <div class="label">ご来店回数</div>
