--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
         <div class="label">電話番号※必須</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
+        <div class="label">メールアドレスの※必須</div>
+        <input type="text" id="mail" placeholder="メールアドレスを入力してください">
+
         <div class="label">ご来店回数</div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
@@ -639,6 +642,7 @@
     const formData = {
         name: document.getElementById('name').value.trim(),
         phone: document.getElementById('phone').value.trim(),
+        mail: document.getElementById('mail').value.trim(),
         visitCount: visitCount,
         selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
         irradiationsCount: irradiationsCount,
@@ -670,7 +674,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nメールアドレス：${formData.mail}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
@@ -702,7 +706,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbzJc8QrFHajngmnmGD7-Rg4i7tBB1aS5S9jkhUjS67489y5WYnCnrqUTI3BYcBDfKky/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbwXLPa4lbo9gkrf7gAz3brdBUAar4-mozrVozquC1aagnGF239sPjuVhbYSMlqYMRiM/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
