--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="label">電話番号※必須</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <div class="label">メールアドレスの※必須</div>
+        <div class="label">メールアドレス※必須</div>
         <input type="text" id="mail" placeholder="メールアドレスを入力してください">
 
         <div class="label">ご来店回数</div>
