--- a/index.html
+++ b/index.html
@@ -475,6 +475,25 @@
             button.addEventListener('click', updateDisplayInfo);
         });
 
+document.querySelectorAll('.symptoms button').forEach(button => {
+    button.addEventListener('click', () => {
+        const calendarContainer = document.querySelector('.calendar-container');
+
+        // 選択されたメニューがあればカレンダーを表示
+        if (document.querySelectorAll('.symptoms button.active').length > 0) {
+            calendarContainer.style.display = 'block';
+        } else {
+            // 選択が解除された場合、カレンダーを非表示
+            calendarContainer.style.display = 'none';
+        }
+    });
+});
+
+// 初期状態でカレンダーを非表示にする
+document.addEventListener('DOMContentLoaded', () => {
+    document.querySelector('.calendar-container').style.display = 'none';
+});
+
 
         // 日付セルのクリックイベントで希望日時を更新
         document.querySelectorAll('.calendar td').forEach(cell => {
