--- a/index.html
+++ b/index.html
@@ -192,27 +192,43 @@
         }
 
         .loading-spinner {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            display: none;
-        }
+    position: fixed; /* 画面全体に対応 */
+    top: 50%; /* 縦中央 */
+    left: 50%; /* 横中央 */
+    transform: translate(-50%, -50%);
+    display: none; /* 初期状態は非表示 */
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.6); /* 半透明の黒背景で注目度アップ */
+    padding: 40px; /* 周囲に余白をつける */
+    border-radius: 10px; /* 角丸で柔らかい印象 */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* 少し立体感を追加 */
+}
 
-        .spinner {
-            width: 40px;
-            height: 40px;
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-top-color: #444;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
+.spinner {
+    width: 60px; /* スピナーをさらに大きく */
+    height: 60px;
+    border: 5px solid rgba(255, 255, 255, 0.2); /* 薄い白で枠を柔らかく */
+    border-top-color: #00d1ff; /* 明るい青で目立たせる */
+    border-radius: 50%; /* 丸い形状 */
+    animation: spin 0.7s linear infinite; /* 滑らかで速い回転 */
+    margin-left: 12px; /* スピナーを右にずらす */
+}
 
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
-        }
+.loading-text {
+    margin-top: 20px; /* スピナーとテキストの間隔 */
+    font-size: 15px; /* さらに大きなフォントサイズ */
+    font-weight: bold; /* 太字で目立たせる */
+    color: #ffffff; /* 純白で高いコントラスト */
+    letter-spacing: 1px; /* 文字間隔を広げてモダンな印象に */
+    text-align: center;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* テキストに影をつけて視認性アップ */
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
 
         .available {
             color: red;
@@ -467,6 +483,7 @@
             </div>
             <div class="loading-spinner" id="loadingSpinner">
                 <div class="spinner"></div>
+                <div class="loading-text">読み込み中...</div>
             </div>
         </div>
 
