--- a/index.html
+++ b/index.html
@@ -176,14 +176,15 @@
             margin-bottom: 10px;
         }
 
-        .week-button {
-            padding: 10px 20px;
-            background-color: #444;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+.week-button {
+    padding: 10px 20px; /* 上下10px、左右20pxの内側の余白を追加 */
+    background-color: #444; /* ボタンの背景色を濃いグレーに設定 */
+    color: #fff; /* ボタンのテキスト色を白に設定 */
+    border: none; /* ボタンの境界線を削除 */
+    border-radius: 4px; /* ボタンの角を4pxの半径で丸める */
+    cursor: pointer; /* マウスカーソルをポインター（指の形）に変更 */
+    margin-left: 31px; /* 左側に20pxの余白を追加して右にずらす */
+}
 
         .current-month {
             font-size: 16px;
